...
          autoCapitalize="none"
          autoCorrect={false}
          textContentType="emailAddress"
          value={email}
          onChangeText={setEmailNumber}
          autoFocus
          testID="signin-email"
          {...props}
        />
      </Content>
      {props.error ? (
        <ErrorText color="destructive" fontSize="xs">
          *{props.error}
...
